2010-04-02  Andrew Scherkus  <scherkus@chromium.org>

Reviewed by Eric Carlson and Eric Seidel.

        Don't stop the playback event timer when media resource loading has suspended.
        https://bugs.webkit.org/show_bug.cgi?id=37003

        When a user agent decides to suspend media resource loading and enters the
        NETWORK_IDLE state we are supposed to only stop the progress event timer but
        keep the playback timer running.

        Test: http/tests/media/video-play-suspend.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::setNetworkState): Only stop the progress event timer.

2010-04-02  Andrew Scherkus  <scherkus@chromium.org>

        Reviewed by Eric Carlson and Eric Seidel.

        Don't stop the playback event timer when media resource loading has suspended.
        https://bugs.webkit.org/show_bug.cgi?id=37003

        When a user agent decides to suspend media resource loading and enters the
        NETWORK_IDLE state we are supposed to only stop the progress event timer but
        keep the playback timer running.

        Currently Chromium is the only platform that fires the suspend event
        hence most platforms skipping this test.

        * http/tests/media/video-play-suspend-expected.txt: Added.
        * http/tests/media/video-play-suspend.html: Added.
        * platform/gtk/Skipped: Doesn't fire a suspend event.
        * platform/mac/Skipped: Ditto.
        * platform/win/Skipped: Ditto.

Canonical link: https://commits.webkit.org/48316@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57023 268f45cc-cd09-0410-ab3c-d52691b4dbfc